--- a/stage.html
+++ b/stage.html
@@ -62,11 +62,11 @@
                         </div>
 
                         <div class="text-center">
-                            <img src="./assets/images/RVP-logo-CPcode.png" class="float rounded">
+                            <img src="./assets/images/RVP-logo-CPcode.png" class="float rounded col-xs-8">
                         </div>
 
                         <div class="text-center">
-                            <img src="./assets/images/carteelec.png" class="float rounded">
+                            <img src="./assets/images/carteelec.png" class="float rounded col-xs-8">
                         </div>
 
                         <div>
