--- a/stage.html
+++ b/stage.html
@@ -61,28 +61,28 @@
                             <h1 class="h2">05 : Stage</h1>
                         </div>
 
-                        <div class="text-center">
-                            <img src="./assets/images/RVP-logo-CPcode.png" class="float rounded col-xs-8">
+                        <div class="text-center ">
+                            <img src=" ./assets/images/RVP-logo-CPcode.png" class="float rounded img_stage1">
                         </div>
 
-                        <div class="text-center">
-                            <img src="./assets/images/carteelec.png" class="float rounded col-xs-8">
+                        <div class="text-center ">
+                            <img src="./assets/images/carteelec.png " class="float rounded img_stage2">
                         </div>
 
                         <div>
-                            <h2 class="h3">Activités</h2>
+                            <h2 class="h3 ">Activités</h2>
                             <p>Développement de logiciels en embarqué L’activité principale (et historique) de CPcode consiste à développer des logiciels sur cartes électroniques à base de microcontrôleur (embarqué) : Développement « bas niveau » : drivers
                                 de périphériques, gestion d’écrans, implémentations de stack (graphisme, communication, …), mise en œuvre de bus de terrain, … Développement niveau « applicatif » : contrôle commande « temps réel », affichage, log d’informations,
                                 transfert de données, … </p>
                         </div>
 
 
-                        <h2 class="h3">Projets</h2>
+                        <h2 class="h3 ">Projets</h2>
                         <p>Nous devions crée une application Android qui devais effectuer une serie de ping sur demande. Nous devions crée un moyen d'estimé la connexion internet selon les lieux des chantiers parcouru</p>
 
                         <div>
                             <ul>
-                                <p class="h3">Contrainte de développement</p>
+                                <p class="h3 ">Contrainte de développement</p>
                                 <li>Suivi du code assuré par GIT</li>
                                 <li>Code commenté</li>
                             </ul>
@@ -90,7 +90,7 @@
 
                         <div>
                             <ul>
-                                <p class="h3">Travail à réaliser</p>
+                                <p class="h3 ">Travail à réaliser</p>
                                 <li>Analyse du cahier des charges / vérification faisabilité technique</li>
                                 <li>Analyse IHM : proposition d’IHM pour validation</li>
                                 <li>Développement</li>
@@ -98,12 +98,12 @@
                                 <li>Livraison / transfert de compétences</li>
                             </ul>
                             <div>
-                                <img src="./assets/images/organisationstage.png" class="float-none img-responsive">
+                                <img src="./assets/images/organisationstage.png " class="float-none img-responsive ">
                             </div>
                         </div>
                         <div>
                             <ul>
-                                <p class="h3">Eléments à fournir en fin de développement</p>
+                                <p class="h3 ">Eléments à fournir en fin de développement</p>
                                 <li>Code source (sous GIT)</li>
                                 <li>Documentation logicielle</li>
                                 <li>Liste des tests effectués (cahier de recettes)</li>
@@ -111,47 +111,47 @@
                         </div>
                     </div>
 
-                    <img src="./assets/images/foret.jpg" class="img-responsive cadreImage" alt="">
-                    <div class="card-container text-center">
+                    <img src="./assets/images/foret.jpg " class="img-responsive cadreImage " alt=" ">
+                    <div class="card-container text-center ">
 
-                        <div class="row">
-                            <div class="col-lg-4 col-md-6">
-                                <div class="card">
-                                    <img src="./assets/images/pings.png" class="card-img-top" alt="..." width="100" height="100">
-                                    <div class="card-body">
-                                        <h3 class="card-title">Les pings</h3>
-                                        <p class="card-text">Une fois l’adresse ip, le timeout (en seconde) et la fréquence (en seconde) rentrées et le bouton pressé, les pings sont effectués en arrière-plan sur la fréquence demandé.</p>
+                        <div class="row ">
+                            <div class="col-lg-4 col-md-6 ">
+                                <div class="card ">
+                                    <img src="./assets/images/pings.png " class="card-img-top " alt="... " width="100 " height="100 ">
+                                    <div class="card-body ">
+                                        <h3 class="card-title ">Les pings</h3>
+                                        <p class="card-text ">Une fois l’adresse ip, le timeout (en seconde) et la fréquence (en seconde) rentrées et le bouton pressé, les pings sont effectués en arrière-plan sur la fréquence demandé.</p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 col-md-6">
-                                <div class="card">
-                                    <img src="./assets/images/mailimage.PNG" class="card-img-top" alt="..." width="100" height="100">
-                                    <div class="card-body">
-                                        <h3 class="card-title">Les mails</h3>
-                                        <p class="card-text">On saisie l’adresse mail et le mot de passe (crypté) de l’envoyeur, et l’adresse du receveur. Le message est écrit automatiquement (composé de la date et l’heure et du dernier fichier de test)
+                            <div class="col-lg-4 col-md-6 ">
+                                <div class="card ">
+                                    <img src="./assets/images/mailimage.PNG " class="card-img-top " alt="... " width="100 " height="100 ">
+                                    <div class="card-body ">
+                                        <h3 class="card-title ">Les mails</h3>
+                                        <p class="card-text ">On saisie l’adresse mail et le mot de passe (crypté) de l’envoyeur, et l’adresse du receveur. Le message est écrit automatiquement (composé de la date et l’heure et du dernier fichier de test)
                                         </p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 col-md-6">
-                                <div class="card">
-                                    <img src="./assets/images/fichier.png" class="card-img-top" alt="..." width="100" height="100">
-                                    <div class="card-body">
-                                        <h3 class="card-title">Le fichier</h3>
-                                        <p class="card-text">Un fichier texte créer pour accueillir des données, des données écrites en format csv pour une utilisation facilité sur pc</p>
+                            <div class="col-lg-4 col-md-6 ">
+                                <div class="card ">
+                                    <img src="./assets/images/fichier.png " class="card-img-top " alt="... " width="100 " height="100 ">
+                                    <div class="card-body ">
+                                        <h3 class="card-title ">Le fichier</h3>
+                                        <p class="card-text ">Un fichier texte créer pour accueillir des données, des données écrites en format csv pour une utilisation facilité sur pc</p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 col-md-6">
-                                <div class="card">
-                                    <img src="./assets/images/gps.png" class="card-img-top" alt="..." width="100" height="100">
-                                    <div class="card-body">
-                                        <h3 class="card-title">Le GPS</h3>
-                                        <p class="card-text">Pendant les tests, la localisation de l’utilisateur pour savoir l’endroit ou la connexion manque.</p>
+                            <div class="col-lg-4 col-md-6 ">
+                                <div class="card ">
+                                    <img src="./assets/images/gps.png " class="card-img-top " alt="... " width="100 " height="100 ">
+                                    <div class="card-body ">
+                                        <h3 class="card-title ">Le GPS</h3>
+                                        <p class="card-text ">Pendant les tests, la localisation de l’utilisateur pour savoir l’endroit ou la connexion manque.</p>
                                     </div>
                                 </div>
                             </div>
@@ -159,21 +159,21 @@
                         </div>
                     </div>
 
-                    <img src="./assets/images/foret.jpg" class="img-responsive cadreImage" alt="">
-                    <div class="card-container">
-                        <h2 class="h3">Bilan du stage</h2>
+                    <img src="./assets/images/foret.jpg " class="img-responsive cadreImage " alt=" ">
+                    <div class="card-container ">
+                        <h2 class="h3 ">Bilan du stage</h2>
                         <ul>
-                            <p class="h3">Les bons côtés de mon stage </p>
+                            <p class="h3 ">Les bons côtés de mon stage </p>
                             <li>La mission intéressante</li>
                             <li>Le travail en équipe</li>
                         </ul>
                         <ul>
-                            <p class="h3">Les mauvais côtés de mon stage</p>
+                            <p class="h3 ">Les mauvais côtés de mon stage</p>
                             <li>Le télétravail</li>
                             <li>La difficulté imprévue</li>
                         </ul>
                         <ul>
-                            <p class="h3">Hardskills</p>
+                            <p class="h3 ">Hardskills</p>
                             <li>Plus de connaissance en JAVA</li>
                             <li>Connaissance approfondie sur Android Studio</li>
                             <li>Maitrise de GitHub</li>
@@ -186,22 +186,22 @@
     </div>
 
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="float-none">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-xs-12 ">
+                    <div class="float-none ">
                         <div>
                             <br />
-                            <p class="pt-3">
-                                <img src="assets/images/github.png" class="float-none rounded" alt="" width="26" height="26" />
-                                <a href="https://github.com/Matis-s-se"> Github</a>
+                            <p class="pt-3 ">
+                                <img src="assets/images/github.png " class="float-none rounded " alt=" " width="26 " height="26 " />
+                                <a href="https://github.com/Matis-s-se "> Github</a>
                             </p>
                             <p>
-                                <img src="assets/images/Mail.png" class="float-none rounded" alt="" width="26" height="26" />
+                                <img src="assets/images/Mail.png " class="float-none rounded " alt=" " width="26 " height="26 " />
                                 <a>matissedimier@gmail.com</a>
                             </p>
                             <p>
-                                <img src="assets/images/telephone.png" class="float-none rounded" alt="" width="26" height="26" />
+                                <img src="assets/images/telephone.png " class="float-none rounded " alt=" " width="26 " height="26 " />
                                 <a>07.82.44.37.71</a>
                             </p>
                             <p>Mon cv: <a>en attente</a></p>
@@ -213,11 +213,11 @@
     </footer>
 
     <script>
-        document.addEventListener("DOMContentLoaded", function(event) {
+        document.addEventListener("DOMContentLoaded ", function(event) {
             navActivePage();
         });
     </script>
-    <script type="text/javascript" src="./main.70a66962.js"></script>
+    <script type="text/javascript " src="./main.70a66962.js "></script>
 </body>
 
 </html>
