--- a/stage.html
+++ b/stage.html
@@ -62,11 +62,11 @@
                         </div>
 
                         <div class="text-center ">
-                            <img src=" ./assets/images/RVP-logo-CPcode.png" class="float rounded img_stage1">
+                            <img src=" ./assets/images/RVP-logo-CPcode.png" class="img-fluid float rounded ">
                         </div>
 
                         <div class="text-center ">
-                            <img src="./assets/images/carteelec.png " class="float rounded img_stage2">
+                            <img src="./assets/images/carteelec.png " class="img-fluid float rounded ">
                         </div>
 
                         <div>
