--- a/projets.html
+++ b/projets.html
@@ -59,16 +59,16 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-lg-4">
-                            <img src="./assets/images/xmlAS.png" class="float rounded" width="300" height="300">
-                        </div>
-                        <div class="col-lg-8">
-                            <div class="resume-item">
-                                <h2 class="text-center">Projet GedImagination</h2>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-                                    make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
-                                    containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <div class="col-lg-4 col-md-12">
+                            <div class="text-center">
+                                <img src="./assets/images/xmlAS.png" class="img-fluid rounded img_projets1" width="300" height="300">
                             </div>
+                        </div>
+                        <div class="col-lg-8 col-md-12">
+                            <h2 class="text-center">Projet GedImagination</h2>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+                                a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+                                Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                         </div>
                     </div>
                 </div>
