--- a/stage.html
+++ b/stage.html
@@ -8,25 +8,19 @@
     <meta content="description" name="description">
     <meta name="google" content="notranslate" />
     <meta content="Mashup templates have been developped by Orson.io team" name="author">
-
-    <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
-
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
     <link href="./assets/favicon.ico" rel="icon">
-
     <title>Mon stage</title>
-
     <link href="./main.3f6952e4.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="">
+<body>
     <div id="site-border-left"></div>
     <div id="site-border-right"></div>
     <div id="site-border-top"></div>
     <div id="site-border-bottom"></div>
-    <!-- Add your content of header -->
     <header>
         <nav class="navbar  navbar-fixed-top navbar-default">
             <div class="container">
@@ -62,11 +56,11 @@
                         </div>
 
                         <div class="text-center ">
-                            <img src=" ./assets/images/RVP-logo-CPcode.png" class="img-fluid float rounded ">
+                            <img src=" ./assets/images/RVP-logo-CPcode.png" class="img-fluid rounded img_stage1">
                         </div>
 
                         <div class="text-center ">
-                            <img src="./assets/images/carteelec.png " class="img-fluid float rounded ">
+                            <img src="./assets/images/carteelec.png " class="img-fluid rounded img_stage2">
                         </div>
 
                         <div>
