--- a/veilleTechno.html
+++ b/veilleTechno.html
@@ -8,15 +8,10 @@
     <meta content="description" name="description" />
     <meta name="google" content="notranslate" />
     <meta content="Mashup templates have been developped by Orson.io team" name="author" />
-
-    <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no" />
-
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png" />
     <link href="./assets/favicon.ico" rel="icon" />
-
     <title>Veille Technoligique</title>
-
     <link href="./main.3f6952e4.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
 </head>
@@ -30,7 +25,7 @@
         <nav class="navbar navbar-fixed-top navbar-default">
             <div class="container">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
+          <span class="sr-only ">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -57,12 +52,12 @@
                     <div class="card-container">
 
                         <div class="text-center">
-                            <h1 class="h2">04 : Veille Technologique</h1>
+                            <h1 class="h2 titre_veille">04 : Veille Technologique</h1>
                         </div>
 
                         <div>
                             <h2 class="h3">Sujet</h2>
-                            <p></p>
+                            <p>Oui</p>
                         </div>
 
                         <div>
@@ -71,7 +66,7 @@
                             <h3 class="h4">Outils</h3>
                             <p></p>
                             <h3 class="h4">Quand</h3>
-                            <p></p>
+                            <p>Non</p>
                             <h3 class="h4">Utilisation</h3>
                             <p></p>
 
@@ -82,4 +77,10 @@
             </div>
         </div>
     </div>
+    <script>
+        document.addEventListener("DOMContentLoaded ", function(event) {
+            navActivePage();
+        });
+    </script>
+    <script type="text/javascript " src="./main.70a66962.js "></script>
 </body>
