--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                                 Bonjour,<br />
                                 <span id="typed-strings">
                     <span>Je suis Matisse Dimier</span>
+                                    <span>Fabien le plus bg !!</span>
                                 </span>
                                 <span id="typed"></span>
                             </h1>
