--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
 
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a class="cestDisabled">01 : Page d'accueil</a></li>
-                        <li><a href="./moi.html">02 : A propos de moi</a></li>
+                        <li><a class="cestDisabled">01 : Accueil</a></li>
+                        <li><a href="./moi.html">02 : A propos</a></li>
                         <li><a href="./projets.html">03 : Projets</a></li>
-                        <li><a href="./veilleTechno.html">04 : Veille Technologique</a></li>
+                        <li><a href="./veilleTechno.html">04 : Veille</a></li>
                         <li><a href="./stage.html">05 : Stage</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <!-- Add your site or app content here -->
+
     <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./assets/images/etoiles.jpg')">
         <div class="container">
             <div class="row">
@@ -58,10 +58,10 @@
                     <div class="hero-full-wrapper">
                         <div class="text-content">
                             <h1>
-                                Bonjour,<br />
+                                Matisse Dimier,<br/>
                                 <span id="typed-strings">
-                    <span>Je suis Matisse Dimier</span>
-                                    <span>Fabien le plus bg !!</span>
+                                <span>Test</span>
+                                <span style="color: aqua;">Test 2</span>
                                 </span>
                                 <span id="typed"></span>
                             </h1>
