--- a/moi.html
+++ b/moi.html
@@ -39,25 +39,26 @@
 
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="./index.html">01 : Page d'accueil</a></li>
-                        <li><a class="cestDisabled">02 : A propos de moi</a></li>
-                        <li><a href="./projets.html">03 : Projets</a></li>
-                        <li><a href="./veilleTechno.html">04 : Veille Technologique</a></li>
-                        <li><a href="./stage.html">05 : Stage</a></li>
+                        <li><a href="./index.html">01 : Accueil</a></li>
+                        <li>
+                            <a class="cestDisabled" ">02 : A propos</a></li>
+                        <li><a href="./projets.html ">03 : Projets</a></li>
+                        <li><a href="./veilleTechno.html ">04 : Veille</a></li>
+                        <li><a href="./stage.html ">05 : Stage</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
-    <div class="section-container">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <img src="./assets/images/foret.jpg" class="img-responsive cadreImage" />
-                    <div class="card-container">
-                        <div class="text-center">
-                            <h1 class="h2">02 : Presentation</h1>
+    <div class="section-container ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-xs-12 ">
+                    <img src="./assets/images/foret.jpg " class="img-responsive cadreImage " />
+                    <div class="card-container ">
+                        <div class="text-center ">
+                            <h1 class="h2 ">02 : Presentation</h1>
                         </div>
 
                         <p>Je m'appelle Matisse Dimier</p>
@@ -71,26 +72,26 @@
                         <p>
                             Voici les logiciels que j'ai pu utiliser : Visual Studio Code, Visual Studio, Android Studio, Processing, Arduino
                         </p>
-                        <div class="text-center">
-                            <img src="./assets/images/vsclogo.png" class="float-none rounded" alt="" width="100" height="100" />
-                            <img src="./assets/images/vslogo.png" class="float-none rounded" alt="" width="100" height="100" />
-                            <img src="./assets/images/aslogo.png" class="float-none rounded" alt="" width="100" height="100" />
-                            <img src="./assets/images/plogo.png" class="float-none rounded" alt="" width="100" height="100" />
-                            <img src="./assets/images/alogo.png" class="float-none rounded" alt="" width="100" height="100" />
+                        <div class="text-center ">
+                            <img src="./assets/images/vsclogo.png " class="float-none rounded " alt=" " width="100 " height="100 " />
+                            <img src="./assets/images/vslogo.png " class="float-none rounded " alt=" " width="100 " height="100 " />
+                            <img src="./assets/images/aslogo.png " class="float-none rounded " alt=" " width="100 " height="100 " />
+                            <img src="./assets/images/plogo.png " class="float-none rounded " alt=" " width="100 " height="100 " />
+                            <img src="./assets/images/alogo.png " class="float-none rounded " alt=" " width="100 " height="100 " />
                         </div>
-                        <div class="col-lg-6">
-                            <h3 class="h3">Languages de programation</h3>
+                        <div class="col-lg-6 ">
+                            <h3 class="h3 ">Languages de programation</h3>
                             <p>C#, Java, Python</p>
                         </div>
-                        <div class="col-lg-6">
-                            <h3 class="h3">Bases de données</h3>
+                        <div class="col-lg-6 ">
+                            <h3 class="h3 ">Bases de données</h3>
                             <p>SQL, MySQL, PGSQL</p>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 ">
                             <h3 class="h3 ">Développement web</h3>
                             <p>HTML5, CSS3</p>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 ">
                             <h3 class="h3 ">Développement collaboratif</h3>
                             <p>Trello, GitHub, Git</p>
                         </div>
