--- a/projet1.html
+++ b/projet1.html
@@ -40,7 +40,7 @@
                     <ul class="nav navbar-nav ">
                         <li><a href="./index.html">01 : Accueil</a></li>
                         <li><a href="./moi.html">02 : A propos</a></li>
-                        <li><a class="cestDisabled">03 : Projets</a></li>
+                        <li><a href="projets.html">03 : Projets</a></li>
                         <li><a href="./veilleTechno.html">04 : Veille</a></li>
                         <li><a href="./stage.html">05 : Stage</a></li>
                     </ul>
@@ -49,69 +49,7 @@
         </nav>
     </header>
 
-    <div class="section-container">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="section-container-spacer text-center">
-                        <h1 class="h2">03 :Projets</h1>
-                    </div>
 
-                    <div class="row">
-                        <div class="col-lg-4 col-md-12">
-                            <div class="text-center">
-                                <img src="./assets/images/xmlAS.png" class="img-fluid rounded img_projets1" width="300" height="300">
-                            </div>
-                        </div>
-                        <div class="col-lg-8 col-md-12">
-                            <div class="modal-dialog modal-xl titrecentre">
-                                <h2 class="text-center ">GedImagination</h2>
-                            </div>
-
-                            <p>La société NEGOMAT vient tout juste d’entrer dans le réseau d’adhérents de GEDIMAT. Pour fêter cet événement, NEGOMAT a décidé d’organiser un jeu concours nommé «GEDIMA’GINATION».</p>
-
-                            <a href="./projet1.html">
-                                <p class="ensavoirplus">En savoir plus...</p>
-                            </a>
-
-                            <a href="https://github.com/Pixiel333/gedimagination_androidStudio">
-                                <p>Lien 1 GitHub (Coté android)</p>
-                            </a>
-                            <a href="https://github.com/Pixiel333/gedimagination_web">
-                                <p>Lien 2 GitHub (Coté web)</p>
-                            </a>
-
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-12">
-                            <div class="text-center">
-                                <img src="./assets/images/xmlAS.png" class="img-fluid rounded img_projets1" width="300" height="300">
-                            </div>
-                        </div>
-                        <div class="col-lg-8 col-md-12">
-                            <div class="modal-dialog modal-xl titrecentre">
-                                <h2 class="text-center">Android ping auto</h2>
-                            </div>
-                            <p>L’application, développée sous ANDROID, devra permettre de mesurer la « connectivité » internet en GSM DATA (ou WIFI). L’objectif est d’utiliser cette application pour vérifier qu’internet soit disponible sur certains sites
-                                sur lesquels seront installés des systèmes communiquant en GSM DATA. Pour tester la connectivité sur un chantier par exemple</p>
-
-                            <a href="./projet2.html">
-                                <p class="ensavoirplus">En savoir plus...</p>
-                            </a>
-
-
-                            <a href="https://github.com/gui27Git/Android_ping_auto">
-                                <p>Lien GitHub</p>
-                            </a>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <footer>
         <div class="container">
