--- a/stage.html
+++ b/stage.html
@@ -33,34 +33,35 @@
 
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav ">
-                        <li><a href="./index.html">01 : Page d'accueil</a></li>
-                        <li><a href="./moi.html">02 : A propos de moi</a></li>
+                        <li><a href="./index.html">01 : Accueil</a></li>
+                        <li><a href="./moi.html">02 : A propos</a></li>
                         <li><a href="./projets.html">03 : Projets</a></li>
-                        <li><a href="./veilleTechno.html">04 : Veille Technologique</a></li>
-                        <li><a class="cestDisabled">05 : Stage</a></li>
+                        <li><a href="./veilleTechno.html">04 : Veille</a></li>
+                        <li>
+                            <a class="cestDisabled" ">05 : Stage</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
-    <div class="section-container">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <img src="./assets/images/foret.jpg" class="img-responsive cadreImage">
-                    <div class="card-container">
+    <div class="section-container ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-xs-12 ">
+                    <img src="./assets/images/foret.jpg " class="img-responsive cadreImage ">
+                    <div class="card-container ">
 
-                        <div class="text-center">
-                            <h1 class="h2">05 : Stage</h1>
+                        <div class="text-center ">
+                            <h1 class="h2 ">05 : Stage</h1>
                         </div>
 
                         <div class="text-center ">
-                            <img src=" ./assets/images/RVP-logo-CPcode.png" class="img-fluid rounded img_stage1">
+                            <img src=" ./assets/images/RVP-logo-CPcode.png " class="img-fluid rounded img_stage1 ">
                         </div>
 
                         <div class="text-center ">
-                            <img src="./assets/images/carteelec.png " class="img-fluid rounded img_stage2">
+                            <img src="./assets/images/carteelec.png " class="img-fluid rounded img_stage2 ">
                         </div>
 
                         <div>
