--- a/veilleTechno.html
+++ b/veilleTechno.html
@@ -33,42 +33,44 @@
 
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="./index.html">01 : Page d'accueil</a></li>
-                        <li><a href="./moi.html">02 : A propos de moi</a></li>
+                        <li><a href="./index.html">01 : Accueil</a></li>
+                        <li><a href="./moi.html">02 : A propos</a></li>
                         <li><a href="./projets.html">03 : Projets</a></li>
-                        <li><a class="cestDisabled">04 : Veille Technologique</a></li>
-                        <li><a href="./stage.html">05 : Stage</a></li>
+                        <li>
+                            <a class="cestDisabled" ">04 : Veille</a></li>
+                        <li><a href="./stage.html ">05 : Stage</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
-    <div class="section-container">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <img src="./assets/images/foret.jpg" class="img-responsive cadreImage">
-                    <div class="card-container">
+    <div class="section-container ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-xs-12 ">
+                    <img src="./assets/images/foret.jpg " class="img-responsive cadreImage ">
+                    <div class="card-container ">
 
-                        <div class="text-center">
-                            <h1 class="h2 titre_veille">04 : Veille Technologique</h1>
+                        <div class="text-center ">
+                            <h1 class="h2 titre_veille ">04 : Veille Technologique</h1>
                         </div>
 
                         <div>
-                            <h2 class="h3">Sujet</h2>
-                            <p>Oui</p>
+                            <h2 class="h3 ">Sujet</h2>
+                            <p>L'informatique</p>
                         </div>
 
                         <div>
-                            <h2 class="h3">Comment ?</h2>
+                            <h2 class="h3 gras ">
+                            </h2>
                             <p></p>
-                            <h3 class="h4">Outils</h3>
-                            <p></p>
-                            <h3 class="h4">Quand</h3>
-                            <p>Non</p>
-                            <h3 class="h4">Utilisation</h3>
-                            <p></p>
+                            <h3 class="h3 ">Outils</h3>
+                            <p>Internet</p>
+                            <h3 class="h3 ">Quand</h3>
+                            <p>Quand je peux</p>
+                            <h3 class="h3 ">Utilisation</h3>
+                            <p>Quand je peux</p>
 
                         </div>
 
