--- a/veilleTechno.html
+++ b/veilleTechno.html
@@ -66,7 +66,8 @@
                             </h2>
                             <p></p>
                             <h3 class="h3 ">Outils</h3>
-                            <p>Internet</p>
+                            <p>Internet <ion-icon name="logo-youtube "></ion-icon></p>
+                            
                             <h3 class="h3 ">Quand</h3>
                             <p>Quand je peux</p>
                             <h3 class="h3 ">Utilisation</h3>
@@ -85,4 +86,5 @@
         });
     </script>
     <script type="text/javascript " src="./main.70a66962.js "></script>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js "></script>
 </body>
