--- a/moi.html
+++ b/moi.html
@@ -109,8 +109,11 @@
                         <div>
                             <br />
                             <p class="pt-3 ">
-                                <img src="assets/images/github.png " class="float-none rounded " alt=" " width="26 " height="26 " />
-                                <a href="https://github.com/Matis-s-se "> Github</a>
+                                <div class="icon_align ">
+                                    <ion-icon name="logo-github "></ion-icon>
+                                    <a href="https://github.com/Matis-s-se "> Github</a>
+                                </div>
+                                
                             </p>
                             <p>
                                 <img src="assets/images/Mail.png " class="float-none rounded " alt=" " width="26 " height="26 " />
@@ -134,6 +137,7 @@
         });
     </script>
     <script type="text/javascript " src="./main.70a66962.js "></script>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js "></script>
 </body>
 
 </html>
