--- a/moi.html
+++ b/moi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8" />
@@ -22,6 +22,9 @@
 </head>
 
 <body class="">
+    <div id="osu"></div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/egg.js/1.0/egg.min.js"></script>
+    <script src="./main.js"></script>
     <div id="site-border-left"></div>
     <div id="site-border-right"></div>
     <div id="site-border-top"></div>
@@ -102,28 +105,34 @@
     </div>
 
     <footer>
-        <div class="container ">
-            <div class="row ">
-                <div class="col-xs-12 ">
-                    <div class="float-none ">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="float-none">
                         <div>
                             <br />
-                            <p class="pt-3 ">
-                                <div class="icon_align ">
-                                    <ion-icon name="logo-github "></ion-icon>
-                                    <a href="https://github.com/Matis-s-se "> Github</a>
-                                </div>
-                                
-                            </p>
-                            <p>
-                                <img src="assets/images/Mail.png " class="float-none rounded " alt=" " width="26 " height="26 " />
-                                <a>matissedimier@gmail.com</a>
-                            </p>
-                            <p>
-                                <img src="assets/images/telephone.png " class="float-none rounded " alt=" " width="26 " height="26 " />
-                                <a>07.82.44.37.71</a>
-                            </p>
-                            <p>Mon cv: <a>en attente</a></p>
+                            <ul class="pt-3">
+                                <li>
+                                    <div class="icon_align">
+                                        <a href="https://github.com/Matis-s-se"><ion-icon name="logo-github"></ion-icon>Github</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon_align">
+                                        <a href="mailto:matissedimier@gmail.com"><ion-icon name="mail"></ion-icon>matissedimier@gmail.com</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon_align">
+                                        <span><ion-icon name="call"></ion-icon>07.82.44.37.71</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon_align">
+                                        <a href="attente"><ion-icon name="document"></ion-icon>Mon CV</a>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
