--- a/projets.html
+++ b/projets.html
@@ -120,19 +120,28 @@
                     <div class="float-none">
                         <div>
                             <br />
-                            <p class="pt-3">
-                                <img src="assets/images/github.png" class="float-none rounded" alt="" width="26" height="26" />
-                                <a href="https://github.com/Matis-s-se"> Github</a>
-                            </p>
-                            <p>
-                                <img src="assets/images/Mail.png" class="float-none rounded" alt="" width="26" height="26" />
-                                <a>matissedimier@gmail.com</a>
-                            </p>
-                            <p>
-                                <img src="assets/images/telephone.png" class="float-none rounded" alt="" width="26" height="26" />
-                                <a>07.82.44.37.71</a>
-                            </p>
-                            <p>Mon cv: <a>en attente</a></p>
+                            <ul class="pt-3">
+                                <li>
+                                    <div class="icon_align">
+                                        <a href="https://github.com/Matis-s-se"><ion-icon name="logo-github"></ion-icon>Github</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon_align">
+                                        <a href="mailto:matissedimier@gmail.com"><ion-icon name="mail"></ion-icon>matissedimier@gmail.com</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon_align">
+                                        <span><ion-icon name="call"></ion-icon>07.82.44.37.71</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon_align">
+                                        <a href="attente"><ion-icon name="document"></ion-icon>Mon CV</a>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -146,6 +155,8 @@
         });
     </script>
     <script type="text/javascript" src="./main.70a66962.js"></script>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js "></script>
+    
 </body>
 
 </html>
