--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
                             <h1>
                                 Matisse Dimier,<br/>
                                 <span id="typed-strings">
-                                <span>Test</span>
-                                <span style="color: aqua;">Test 2</span>
+                                <span>Bienvenue sur mon portfolio numérique</span>
+                                <span>Je suis développeur Web</span>
+                                <span>Je suis développeur d'application</span>
                                 </span>
                                 <span id="typed"></span>
                             </h1>
