--- a/veilleTechno.html
+++ b/veilleTechno.html
@@ -110,9 +110,9 @@
                                 <h3 class="">Quand</h3>
                             </div>
                             
-                            <p>Je m'informe souvant durant mes temps libres (durant les trajets de bus ou entre deux cours) et quand les medias me le permettent.</p>
+                            <p>Je m'informe souvent durant mes temps libres (durant les trajets de bus ou entre deux cours) et quand les medias me le permettent.</p>
                             <h3 class="h3 ">Utilisation</h3>
-                            <p>Grace a mes connaissances aquises durant mes recherches, j'ai monté mon propre ordinateur, j'ai crée des outils pour mes jeux ...</p>
+                            <p>Grâce à mes connaissances acquises durant mes recherches, j'ai monté mon propre ordinateur, j'ai créé des outils pour mes jeux ....</p>
                         </div>
                     </div>
                 </div>
