--- a/stage.html
+++ b/stage.html
@@ -38,7 +38,7 @@
                         <li><a href="./projets.html">03 : Projets</a></li>
                         <li><a href="./veilleTechno.html">04 : Veille</a></li>
                         <li>
-                            <a class="cestDisabled" ">05 : Stage</a></li>
+                            <a class="cestDisabled">05 : Stage</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,7 +49,7 @@
         <div class="container ">
             <div class="row ">
                 <div class="col-xs-12 ">
-                    <img src="./assets/images/foret.jpg " class="img-responsive cadreImage ">
+                    <img src="./assets/images/fondfini.png " class="img-responsive cadreImage ">
                     <div class="card-container ">
 
                         <div class="text-center ">
@@ -106,7 +106,7 @@
                         </div>
                     </div>
 
-                    <img src="./assets/images/foret.jpg " class="img-responsive cadreImage " alt=" ">
+                    <img src="./assets/images/fond2.png " class="img-responsive cadreImage " alt=" ">
                     <div class="card-container text-center ">
 
                         <div class="row ">
@@ -154,7 +154,7 @@
                         </div>
                     </div>
 
-                    <img src="./assets/images/foret.jpg " class="img-responsive cadreImage " alt=" ">
+                    <img src="./assets/images/fond3.png " class="img-responsive cadreImage " alt=" ">
                     <div class="card-container ">
                         <h2 class="h3 ">Bilan du stage</h2>
                         <ul>
